# Image_fingerprint

./: README.md
BIF-main/: CMakeLists.txt  README.md  demo.cpp  draw.py  package.xml
BIF-main/gt_loop/: gt_loop_00.txt  gt_loop_02.txt  gt_loop_05.txt  gt_loop_08.txt
BIF-main/include/: Preprocess.h  binary_fingerprint.h
BIF-main/results/: BIF_loop_00.txt  BIF_loop_02.txt  BIF_loop_05.txt  BIF_loop_08.txt
BIF-main/src/: Binary_Fingerprint.cpp  Preprocess.cpp
matlab-version/: Readme.md  main.m  prcurve_drawer.m
matlab-version/Mulran/: Bin2Ptcloud.m  Generate_descriptor.m  Mulran_Load_Data.m  get_scan_Information.m
matlab-version/src/: Generate_descriptor.m  Initialize_data.m  Load_Data.m  Loop_truth.m  Read_Bin.m  align_rim.m  calculate_align_bif.m  calculate_hamming_dis.m  osdir.m  ringkey.m  trans_dct1.m  trans_dct2.m  view_rim.m
matlab-version/tools/: gt_closure.m  pair_line.m
matlab-version/tools/gt_loop/: GT_loop_00.csv  GT_loop_05.csv
